# libdrunkard

./: CMakeLists.txt  Makefile  README.md  index.html  license.txt  params.json  todo
examples/: atw.c  cave.c  dung.c  screen_shotter.c  utils_example.c
include/: drunkard.h  drunkard_utils.h
src/: drunkard.c  drunkard_utils.c
